@@ -2,7 +2,9 @@ Processing test74...
 
 Warnings...
 
+test_input/test74.py:10: Using __getattribute__ in old-style class (B) does not work
 test_input/test74.py:17: __getattr__ should not return None, raise an exception if not found
+test_input/test74.py:20: Using __getattribute__ in old-style class (D) does not work
 test_input/test74.py:22: __getattribute__ should not return None, raise an exception if not found
 test_input/test74.py:30: Function returns a value and also implicitly returns None
 test_input/test74.py:30: __getattr__ should not return None, raise an exception if not found
