@@ -1,7 +1,10 @@
 Version 0.8.13   - xx December 2002
+  * Add --special option to check for __special__ (reserved) method names
+    and that their signature (argument count) is correct
   * Add warning for using __getattribute__ in an old-style class
   * Suppress 'self as first argument' warning for static and class methods
-  * Add --classmethodargs to specify first argument name for class methods
+  * Add --classmethodargs option to specify first argument name
+    for class methods
 
 Version 0.8.12   - 23 December 2002
   * Add --isliteral option to warn when using is/is not against literal
